--- a/dashboard2.css
+++ b/dashboard2.css
@@ -1,4 +1,4 @@
-/* FIXME: these are codes for modifying messasges */
+/* FIXME: these are codes for modifying messages */
 
 .dash-container {
   display: flex;
@@ -50,7 +50,8 @@
   width: 80%;
   text-align: justify;
 }
-.dash-container-modification-area {
+.dash-container-modification-area,
+.dash-container-modify-skills {
   width: 70%;
   padding: 2px;
   display: flex;
@@ -58,11 +59,7 @@
 }
 
 .dash-container-modify-skills {
-  width: 70%;
-  padding: 2px;
-  display: flex;
   gap: 15px;
-  flex-direction: column;
   align-items: center;
 }
 
@@ -100,8 +97,6 @@ div#dash-top-input {
   justify-content: center;
 }
 
-/* FIXME: these are codes for modifying blogs */
-
 .title-blog-to-edit {
   margin: 5px;
 }
@@ -110,4 +105,5 @@ div#dash-top-input {
   text-align: center;
   font-weight: bolder;
   text-transform: uppercase;
+  margin-bottom: 1vw;
 }
