--- a/AboutMe.css
+++ b/AboutMe.css
@@ -37,3 +37,18 @@
   border-radius: 14px;
   text-align: center;
 }
+
+/* Mobile Styles */
+@media only screen and (max-width: 600px) {
+  .ab-detail {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .ab-mission,
+  .ab-me,
+  .ab-values {
+    width: 100%;
+    font-size: small;
+  }
+}
