--- a/Articleview.css
+++ b/Articleview.css
@@ -83,23 +83,28 @@ textarea#message {
   border: none;
   height: auto;
   min-height: 3em;
-  border-radius: 2%;
+  border-radius: 10px;
   font-size: 14px;
   width: 100%;
   text-wrap: wrap;
   text-align: start;
-  overflow-y: scroll;
   padding: 9px;
 }
 
 #view-submitBtn {
   width: 32%;
-  border-radius: 15%;
-  margin-top: 2%;
-  margin-left: 33%;
+  border-radius: 11px;
   color: white;
-  background-color: rgb(70, 70, 107);
+  background-color: rgb(0, 0, 0);
   align-self: center;
   padding: 1%;
   cursor: pointer;
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 600px) {
+  .view-combined-par,
+  .view-art-bottom {
+    font-size: small;
+  }
 }
