--- a/index.css
+++ b/index.css
@@ -15,6 +15,13 @@
   font-weight: bold;
 }
 
+.brand-name {
+  grid-column: span 1;
+  grid-row: 1;
+  height: 5.5vw;
+  width: 9vw;
+  padding-left: 2vw;
+}
 .hm-header-menu {
   display: flex;
   flex-direction: row;
@@ -40,6 +47,11 @@
   object-fit: cover;
 }
 
+.profilepic:hover {
+  transform: scale(1.6);
+  border-radius: 0;
+}
+
 .hm-menu {
   height: 68px;
   background-color: #f5f5f5;
@@ -54,6 +66,43 @@
   z-index: 1;
 }
 
+.menu-link {
+  text-decoration: none;
+  color: hsl(0, 0%, 20%);
+  padding: 3px 6px;
+  transition: color 0.3s ease, box-shadow 0.3s ease; /* Added box-shadow transition */
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0); /* Initial shadow */
+}
+
+.menu-link:hover {
+  color: #4b16dd;
+  border-radius: 3px;
+  box-shadow: 0 0 10px 2px rgba(219, 95, 95, 0.5); /* Grow the shadow on hover */
+}
+
+.active,
+.active:hover {
+  background-color: #333;
+  color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5); /* Initial shadow for the active link */
+}
+
+@keyframes thunder {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.thunder-effect {
+  animation: thunder 1s infinite;
+}
 .hm-main-area {
   height: 37vw;
   font-size: 16px;
