--- a/Subscribe.css
+++ b/Subscribe.css
@@ -3,7 +3,7 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .modalsubscribe {
@@ -35,7 +35,7 @@ html {
 }
 
 .modal-content-wrapper img {
-  width: 100%;
+  /* width: 100%; */
   max-height: 200px;
   object-fit: cover;
   border-bottom: 1px solid #ddd;
@@ -51,20 +51,28 @@ html {
 
 .closesubscribe {
   position: absolute;
-  top: 10px;
-  right: 20px;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  right: 10%;
   font-size: 28px;
   font-weight: bold;
   cursor: pointer;
   transition: color 0.3s;
   color: #e54545;
+  background-color: #fff;
   scale: 1.8;
+  align-items: center;
+  align-content: center;
 }
 
 .closesubscribe:hover,
 .closesubscribe:focus {
-  color: #000;
+  color: #fff;
   text-decoration: none;
+  transform: scale(1.07);
+  background-color: #c0392b;
+  transition: 0.4s;
 }
 
 .modal-content span {
@@ -80,7 +88,7 @@ html {
 }
 
 /* Form styling */
-#subscribeForm {
+.subscribeForm {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -88,7 +96,7 @@ html {
   width: 100%;
 }
 
-#subscribeForm input[type="email"] {
+.subscribeForm input[type="email"] {
   padding: 10px;
   width: 80%;
   max-width: 400px;
@@ -99,11 +107,11 @@ html {
   font-size: 1em;
 }
 
-#subscribeForm input[type="email"]::placeholder {
+.subscribeForm input[type="email"]::placeholder {
   color: #aaa;
 }
 
-#subscribeForm button {
+.subscribeForm button {
   padding: 10px 20px;
   background-color: #e74c3c;
   color: white;
@@ -114,19 +122,17 @@ html {
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-#subscribeForm button:hover {
+.subscribeForm button:hover {
   background-color: #c0392b;
   transform: scale(1.05);
 }
 
-/* Footer styling */
 .modal-footer {
   margin-top: 20px;
+  font-size: 0.8em;
 }
-
 .error {
   color: red;
-  font-size: 0.9em;
 }
 
 .success {
@@ -141,5 +147,26 @@ html {
 
   .modal-content-wrapper img {
     max-height: 150px;
+  }
+
+  .modal-content span {
+    font-size: 1.2em;
+  }
+
+  .modal-content p {
+    font-size: 0.8em;
+    margin-bottom: 20px;
+  }
+
+  .closesubscribe {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: color 0.3s;
+    color: #e54545;
+    scale: 1.8;
   }
 }
