--- a/Skills.css
+++ b/Skills.css
@@ -12,6 +12,15 @@
   margin-bottom: 2vw;
 }
 
+#skills-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 2vw;
+}
+
 .skills-container {
   display: flex;
   flex-direction: row;
