i added date to the article and also all articles are showing up in their display section

--- a/Articles.css
+++ b/Articles.css
@@ -48,6 +48,12 @@
   background-color: #c9c9f0;
 }
 
+span#listOfArticles {
+  display: flex;
+  font-weight: bolder;
+  justify-content: space-around;
+  padding-bottom: 1vw;
+}
 .art-topic-related-pic {
   width: 50%;
   height: 100%;
