--- a/popup.css
+++ b/popup.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
 } */
-
+.dash-popup2,
 .dash-popup {
   display: none;
   position: fixed;
@@ -25,7 +25,8 @@ body {
   align-items: flex-start;
 }
 
-.dash-popup.activated {
+.dash-popup.activated,
+.dash-popup2.activated {
   display: flex;
 }
 
@@ -56,7 +57,9 @@ body {
 }
 
 #confirmAlert,
-#StopDefault {
+#confirmAlert2,
+#StopDefault,
+#StopDefault2 {
   padding: 10px 20px;
   margin-top: 20px;
   border: none;
@@ -66,6 +69,7 @@ body {
   cursor: pointer;
 }
 
-#StopDefault {
+#StopDefault,
+#StopDefault2 {
   background-color: #4d64cc;
 }
