I have debugged the bugs that were an delete item functions

--- a/dashboard2.css
+++ b/dashboard2.css
@@ -112,6 +112,16 @@
   flex-direction: column;
 }
 
+.dash-empty-display {
+  height: 100%;
+  width: 100%;
+  padding-top: 10%;
+  color: hsl(0.52deg 93.18% 46.54%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .dash-container-modify-skills {
   gap: 15px;
   align-items: center;
